[package]
name = "scriber"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
shuttle-serenity = "0.19.0"
shuttle-runtime = "0.19.0"
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
shuttle-secrets = "0.19.0"
tokio = "1.26.0"
tracing = "0.1.37"
poise = "0.5.5"
shuttle-poise = "0.19.0"
chrono = "0.4.26"
surrealdb = { version = "1.0.0-beta.9", features = ["kv-mem", "native-tls"] }
serde = "1.0.164"
tempfile = "3.6.0"
